--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-tensorflow-cpu
-keras==2.4.3
+Flask==2.1.2
 imutils==0.5.4
-numpy~=1.22.3
-opencv-contrib-python-headless
-matplotlib~=3.5.1
-argparse==1.1
-scipy==1.4.1
-scikit-learn==0.24.2
-pillow~=9.1.0
-streamlit~=1.8.1
-streamlit-webrtc==0.20.1
-numpy~=1.22.3
-opencv-python~=4.5.5.64
+keras==2.8.0
+matplotlib==3.5.1
+numpy==1.21.4
+opencv_python==4.5.5.64
+Pillow==9.1.0
+streamlit==1.8.1
+streamlit_webrtc==0.36.1
+tensorflow==2.8.0
